@@ -751,8 +751,7 @@ SetupEnv()
    return;
 }
 
-Window
-MakeExtInitWin(void)
+Window MakeExtInitWin(void)
 {
    Display            *d2;
    Window              win;
